adding apache bit

--- a/wordpress-ansible/roles/wordpress/tasks/main.yml
+++ b/wordpress-ansible/roles/wordpress/tasks/main.yml
@@ -7,6 +7,15 @@
 - name: Extract WordPress  unarchive: src=/tmp/wordpress.tar.gz dest=/var/www/ copy=no
   sudo: yes
 
+- name: Update default Apache site
+  sudo: yes
+  lineinfile:
+    dest=/etc/apache2/sites-enabled/000-default.conf
+    regexp="(.)+DocumentRoot /var/www/html"
+    line="DocumentRoot /var/www/wordpress"
+  notify:
+    - restart apache
+
 - name: Copy sample config file
   command: mv /var/www/wordpress/wp-config-sample.php /var/www/wordpress/wp-config.php creates=/var/www/wordpress/wp-config.php
   sudo: yes
