--- a/wordpress-ansible/roles/wordpress/tasks/main.yml
+++ b/wordpress-ansible/roles/wordpress/tasks/main.yml
@@ -1,5 +1,6 @@
 ---
-- name: Download WordPress  get_url:
+- name: Download WordPress
+  get_url:
     url=https://wordpress.org/latest.tar.gz
     dest=/tmp/wordpress.tar.gz
     validate_certs=no
